fix hero dimensions

--- a/_includes/hero_video.html
+++ b/_includes/hero_video.html
@@ -30,7 +30,7 @@ Usage:
   ></video>
   
   <!-- Content overlay -->
-  <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 animate-fade-in">
+  <div class="relative z-10 flex flex-col items-center mt-[15vh] md:mt-[35vh] lg:mt-[25vh] mb-[35vh] md:mb-[45vh] lg:mb-[35vh] h-full px-4 animate-fade-in">
     <h1 class="text-6xl tracking-tighter text-center text-white font-paperlang lg:text-8xl">
       {{ include.title }}
     </h1>
